test/ddc-spec/error/01-ErrorExp/25-PrivateEscape/Main.ds

module Main
import Data.Ref
where


foo = private r in allocRef {@r} 5
